--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,13 +14,9 @@
         <url-pattern>/faces/*</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>faces/registroalquiler.xhtml</welcome-file>
+        <welcome-file>faces/registrocliente.xhtml</welcome-file>
     </welcome-file-list>
     <listener>
         <listener-class>edu.eci.cvds.guice.GuiceContextListener</listener-class>
     </listener>
-   <!--  <context-param>
-        <param-name>primefaces.THEME</param-name>
-        <param-value>none</param-value>
-    </context-param> -->
 </web-app>
